tests/negative/gold/postfix_test.gold
tests/negative/postfix_test.toit:6:3: error: Can't assign to unknown 'unresolved'
  unresolved++
  ^~~~~~~~~~
tests/negative/postfix_test.toit:7:3: error: Can't assign to unknown 'unresolved'
  unresolved++
  ^~~~~~~~~~
Compilation failed.
